# wellheard-ai

./: .dockerignore  .gitignore  AB_TESTING_GUIDE.md  AB_TESTING_QUICK_START.md  BACKCHANNEL_IMPLEMENTATION.md  BACKCHANNEL_TESTING_GUIDE.md  CALL_BRIDGE_INTEGRATION_PATCH.md  CALL_ORCHESTRATOR_SUMMARY.md  CALL_ORCHESTRATOR_USAGE.md  CHANGES.md  CONVERSATION_RECOVERY.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_VALIDATION.md  LLM_OPTIMIZATION_QUICKSTART.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.txt  PROSODY_CHUNKING.md  QUICK_START.md  README_CALL_ORCHESTRATOR.md  README_LLM_OPTIMIZATION.md  README_PROSODY.md  RECOVERY_INTEGRATION_EXAMPLES.md  SENTIMENT_ADAPTIVE_RESPONSE_SYSTEM.md  TEST_SCENARIOS.md  TRANSFER_GATE_GUIDE.md  TRANSFER_INTEGRATION.md  cloudbuild.yaml  cloudrun-service.yaml  deploy-cloudrun.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fly.toml  main.py  pyproject.toml
config/: .env.example  livekit.yaml  nginx.conf  settings.py
docs/: DEPLOYMENT.md  QUICKSTART.md  SETUP_CHECKLIST.md
examples/: ab_test_example.py
src/: __init__.py  ab_testing.py  cadence_engine.py  call_bridge.py  call_grader.py  call_logger.py  call_manager.py  call_orchestrator.py  call_scheduler.py  call_state.py  concurrent_call_engine.py  conversation_recovery.py  dispositions.py  fast_call_filter.py  inbound_handler.py  lead_importer.py  llm_router.py  llm_router_integration.py  memory.py  model_router.py  models.py  monitor.py  webhooks.py  (+16 more)
(+93 files in other folders)
